apps/cli/crates/onequery-cli/src/commands/gateway/snapshots/onequery__commands__gateway__tests__render_gateway_output_snapshot.snap
---
source: crates/onequery-cli/src/commands/gateway/tests.rs
expression: "output.lines.join(\"\\n\")"
---
Gateway foundation ready.
Config dir: /tmp/onequery/config/self-host
Data dir: /tmp/onequery/data
Listen: 127.0.0.1:5656
Created self-host config.toml: yes
Created secrets.toml: yes
Next step: onequery gateway start
