apps/cli/crates/onequery-cli/src/commands/gateway/snapshots/onequery__commands__gateway__tests__render_gateway_start_output_snapshot.snap
---
source: crates/onequery-cli/src/commands/gateway/tests.rs
expression: "output.lines.join(\"\\n\")"
---
Gateway start is wired as a Phase 2 skeleton.
Bootstrapped: yes
Listen: 127.0.0.1:5656
Log path: /tmp/onequery/data/logs/server.log
Running markers present: no
No server process was launched in this milestone.
