apps/cli/crates/onequery-cli/src/commands/gateway/snapshots/onequery__commands__gateway__tests__render_gateway_status_output_snapshot.snap
---
source: crates/onequery-cli/src/commands/gateway/tests.rs
expression: "output.lines.join(\"\\n\")"
---
Gateway status
Bootstrapped: yes
Listen: 127.0.0.1:5656
Runtime: not_running
PGlite directory present: no
Log file present: no
PID file present: no
Lock file present: no
