apps/cli/crates/onequery-cli/src/commands/gateway/snapshots/onequery__commands__gateway__tests__render_gateway_status_output_treats_lock_without_runtime_state_as_stale_markers_snapshot.snap
---
source: crates/onequery-cli/src/commands/gateway/tests.rs
expression: "output.lines.join(\"\\n\")"
---
Gateway status
Bootstrapped: yes
Listen: 127.0.0.1:5656
Runtime: stale_markers
